--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1D31926C-F4DC-4A6E-A811-3A28D1826243}</ProjectGuid>
+    <ProjectGuid>{00097FDB-2515-4EB5-8473-1F42E2AE8D21}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Core</RootNamespace>
-    <AssemblyName>Core</AssemblyName>
+    <RootNamespace>Game</RootNamespace>
+    <AssemblyName>Game</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <LangVersion>8</LangVersion>
@@ -42,16 +42,26 @@
     <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine">
+      <HintPath>/Applications/Unity/Unity.app/Contents/Managed/UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="IoC\ContainerRegistrationsBase.cs" />
-    <Compile Include="IoC\IContainerRegistrations.cs" />
-    <Compile Include="IoC\IoC.cs" />
-    <Compile Include="JetBrains\Annotations.cs" />
-    <Compile Include="Logging\ILogger.cs" />
-    <Compile Include="Logging\PrefixedLogger.cs" />
+    <Compile Include="ContainerRegistrations.cs" />
+    <Compile Include="EntryPoint.cs" />
+    <Compile Include="EntryPoint_Unity.cs" />
+    <Compile Include="Logging\UnityConsoleLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
+      <Project>{65b4645b-0657-4511-8731-0d77b2b065e0}</Project>
+      <Name>Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{1d31926c-f4dc-4a6e-a811-3a28d1826243}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
