--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -48,6 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContainerRegistrations.cs" />
+    <Compile Include="Cube\Piece.cs" />
+    <Compile Include="Cube\RubiksCube.cs" />
+    <Compile Include="Cube\Slice.cs" />
+    <Compile Include="Cube\Stickers\StickerData.cs" />
+    <Compile Include="Cube\Stickers\StickerDataFactory.cs" />
+    <Compile Include="Cube\Stickers\StickerFactory.cs" />
     <Compile Include="EntryPoint.cs" />
     <Compile Include="EntryPoint_Unity.cs" />
     <Compile Include="Extensions\FaceColorExtensions.cs" />
@@ -55,9 +61,7 @@
     <Compile Include="Extensions\Vector3Extensions.cs" />
     <Compile Include="Instance.cs" />
     <Compile Include="Logging\UnityConsoleLogger.cs" />
-    <Compile Include="Piece.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rubik.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj">
