--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Cube\Stickers\StickerData.cs" />
     <Compile Include="Cube\Stickers\StickerDataFactory.cs" />
     <Compile Include="Cube\Stickers\StickerFactory.cs" />
+    <Compile Include="DragListener.cs" />
     <Compile Include="EntryPoint.cs" />
     <Compile Include="EntryPoint_Unity.cs" />
     <Compile Include="Extensions\FaceColorExtensions.cs" />
@@ -61,6 +62,11 @@
     <Compile Include="Extensions\Vector3Extensions.cs" />
     <Compile Include="Instance.cs" />
     <Compile Include="Logging\UnityConsoleLogger.cs" />
+    <Compile Include="Messages\DebugStartCoroutine.cs" />
+    <Compile Include="Messages\DragEndMessage.cs" />
+    <Compile Include="Messages\DragMessageBase.cs" />
+    <Compile Include="Messages\DragProgressMessage.cs" />
+    <Compile Include="Messages\MouseDownMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
