Implement command pattern (undo/redo)

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -47,6 +47,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\CommandHandler.cs" />
+    <Compile Include="Command\EnqueueCommand.cs" />
+    <Compile Include="Command\ICommand.cs" />
+    <Compile Include="Command\ICommandExecutor.cs" />
+    <Compile Include="Command\ICommandHandler.cs" />
     <Compile Include="ContainerRegistrations.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="IoC\ContainerRegistrationsBase.cs" />
