--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\PrefixedLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State\IState.cs" />
+    <Compile Include="State\StateContext.cs" />
     <Compile Include="TinyMessenger\TinyMessenger.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
