--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -48,30 +48,42 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera\CameraController.cs" />
-    <Compile Include="Camera\State\CameraControllerStateBase.cs" />
-    <Compile Include="Camera\State\DisabledState.cs" />
-    <Compile Include="Camera\State\DraggingState.cs" />
-    <Compile Include="Camera\State\WaitingForDragState.cs" />
+    <Compile Include="Camera\States\CameraControllerStateBase.cs" />
+    <Compile Include="Camera\States\DisabledState.cs" />
+    <Compile Include="Camera\States\DraggingState.cs" />
+    <Compile Include="Camera\States\WaitingForDragState.cs" />
+    <Compile Include="Command\RotateGameObjectCommand.cs" />
     <Compile Include="Command\RotateSliceCommand.cs" />
     <Compile Include="ContainerRegistrations.cs" />
+    <Compile Include="Cube\Factory\PieceFactory.cs" />
+    <Compile Include="Cube\Factory\RubiksCubeFactory.cs" />
+    <Compile Include="Cube\Factory\StickerDataFactory.cs" />
+    <Compile Include="Cube\Factory\StickerFactory.cs" />
     <Compile Include="Cube\Piece.cs" />
     <Compile Include="Cube\RubiksCube.cs" />
     <Compile Include="Cube\Slice.cs" />
-    <Compile Include="Cube\Stickers\StickerData.cs" />
-    <Compile Include="Cube\Stickers\StickerDataFactory.cs" />
-    <Compile Include="Cube\Stickers\StickerFactory.cs" />
+    <Compile Include="Cube\StickerData.cs" />
     <Compile Include="DragListener.cs" />
     <Compile Include="EntryPoint.cs" />
     <Compile Include="EntryPoint_Unity.cs" />
     <Compile Include="Extensions\FaceColorExtensions.cs" />
     <Compile Include="Extensions\Vector3Extensions.cs" />
+    <Compile Include="GameObjectEnableDisableToggler.cs" />
+    <Compile Include="GameState\GameStateController.cs" />
+    <Compile Include="GameState\States\CubeGameStateBase.cs" />
+    <Compile Include="GameState\States\EndMenuState.cs" />
+    <Compile Include="GameState\States\ExecutingUserMoveState.cs" />
+    <Compile Include="GameState\States\GameStateBase.cs" />
+    <Compile Include="GameState\States\MainMenuState.cs" />
+    <Compile Include="GameState\States\PausedState.cs" />
+    <Compile Include="GameState\States\PlayingState.cs" />
+    <Compile Include="GameState\States\ScramblingState.cs" />
+    <Compile Include="GameState\States\SolvedState.cs" />
     <Compile Include="Instance.cs" />
     <Compile Include="Logging\UnityConsoleLogger.cs" />
-    <Compile Include="Messages\DisableCameraControlMessage.cs" />
     <Compile Include="Messages\DragEndMessage.cs" />
     <Compile Include="Messages\DragMessageBase.cs" />
     <Compile Include="Messages\DragProgressMessage.cs" />
-    <Compile Include="Messages\EnableCameraControlMessage.cs" />
     <Compile Include="Messages\MouseDownMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
