--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Messages\DragProgressMessage.cs" />
     <Compile Include="Messages\MouseDownMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\InGameScreen.cs" />
     <Compile Include="UI\IScreen.cs" />
     <Compile Include="UI\MainMenuScreen.cs" />
   </ItemGroup>
