--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -68,9 +68,12 @@
     <Compile Include="Messages\DisableCameraControlMessage.cs" />
     <Compile Include="Messages\EnableCameraControlMessage.cs" />
     <Compile Include="Messages\SpinCamera360Message.cs" />
+    <Compile Include="Messages\UpdateMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\IState.cs" />
     <Compile Include="State\StateContext.cs" />
+    <Compile Include="Timer\ITimer.cs" />
+    <Compile Include="Timer\SubscribingTimer.cs" />
     <Compile Include="TinyMessenger\TinyMessenger.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
