Add options menu
Missing the restart option

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Logging\PrefixedLogger.cs" />
     <Compile Include="Messages\DisableCameraControlMessage.cs" />
     <Compile Include="Messages\EnableCameraControlMessage.cs" />
+    <Compile Include="Messages\SetPausedMessage.cs" />
     <Compile Include="Messages\SpinCamera360Message.cs" />
     <Compile Include="Messages\UpdateMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
