--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -77,10 +77,7 @@
     <Compile Include="Extensions\Vector3Extensions.cs" />
     <Compile Include="GameState\GameStateController.cs" />
     <Compile Include="GameState\States\CubeGameStateBase.cs" />
-    <Compile Include="GameState\States\EndMenuState.cs" />
-    <Compile Include="GameState\States\GameStateBase.cs" />
     <Compile Include="GameState\States\MainMenuState.cs" />
-    <Compile Include="GameState\States\PausedState.cs" />
     <Compile Include="GameState\States\PlayingState.cs" />
     <Compile Include="GameState\States\PlayingState_OptionsCallbacks.cs" />
     <Compile Include="GameState\States\ScramblingState.cs" />
@@ -94,6 +91,8 @@
     <Compile Include="Messages\MouseDownMessage.cs" />
     <Compile Include="Messages\OptionsRequestedMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\EndGameScreen.cs" />
+    <Compile Include="UI\FreeViewScreen.cs" />
     <Compile Include="UI\InGameScreen.cs" />
     <Compile Include="UI\IScreen.cs" />
     <Compile Include="UI\MainMenuScreen.cs" />
